--- a/ShoppingApp/ShoppingApp/Views/ShoppingCartPage.xaml
+++ b/ShoppingApp/ShoppingApp/Views/ShoppingCartPage.xaml
@@ -2,10 +2,10 @@
 <ContentPage x:Class="ShoppingApp.Views.ShoppingCartPage"
              xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:helpers="clr-namespace:ShoppingApp.Helpers"
              xmlns:local="clr-namespace:ShoppingApp.ViewModels"
+             xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d">
 
@@ -63,7 +63,7 @@
                                        VerticalOptions="Center" />
                                 <Label Grid.Column="1"
                                        FontSize="Small"
-                                       Text="{Binding Units}"
+                                       Text="{Binding UnitsInCart}"
                                        VerticalOptions="Center" />
                                 <Label Grid.Column="2"
                                        FontSize="Small"
@@ -80,7 +80,6 @@
                 <Button Padding="8"
                         Command="{Binding ClearCommand}"
                         FontSize="22"
-                        HorizontalOptions="CenterAndExpand"
                         Text="Welcome to the Happy MiniMarket"
                         VerticalOptions="Center" />
             </StackLayout>
