--- a/ShoppingApp/ShoppingApp/Views/ShoppingCartPage.xaml
+++ b/ShoppingApp/ShoppingApp/Views/ShoppingCartPage.xaml
@@ -17,6 +17,7 @@
                     ItemSizingStrategy="MeasureAllItems"
                     ItemsLayout="VerticalList"
                     ItemsSource="{Binding Cart}"
+                    SelectedItem="{Binding SelectedProduct, Mode=TwoWay}"
                     SelectionMode="Single">
         <CollectionView.EmptyView>
             <StackLayout Padding="25">
@@ -48,7 +49,7 @@
                     <SwipeView.RightItems>
                         <SwipeItems>
                             <SwipeItem BackgroundColor="{StaticResource DeleteColor}"
-                                       Command="{Binding Source={RelativeSource AncestorType={x:Type local:ShoppingCartViewModel}}, Path=Delete, Mode=TwoWay}"
+                                       Command="{Binding Source={RelativeSource AncestorType={x:Type local:ShoppingCartViewModel}}, Path=DeleteCommand, Mode=TwoWay}"
                                        CommandParameter="{Binding .}"
                                        Text="Edit" />
                         </SwipeItems>
