--- a/ShoppingApp/ShoppingApp/Views/InventoryPage.xaml
+++ b/ShoppingApp/ShoppingApp/Views/InventoryPage.xaml
@@ -16,7 +16,7 @@
     <CollectionView BackgroundColor="Transparent"
                     ItemSizingStrategy="MeasureAllItems"
                     ItemsLayout="VerticalList"
-                    ItemsSource="{Binding Inventory}"
+                    ItemsSource="{Binding InventoryPage}"
                     SelectedItem="{Binding SelectedProduct, Mode=TwoWay}"
                     SelectionMode="Single">
         <CollectionView.EmptyView>
