Added edit swipe functionality to shopping cart

--- a/ShoppingApp/ShoppingApp/Views/InventoryPage.xaml
+++ b/ShoppingApp/ShoppingApp/Views/InventoryPage.xaml
@@ -82,7 +82,7 @@
             </CollectionView.Header>
             <CollectionView.Footer>
                 <Grid Padding="10">
-                    <Label Text="{Binding Subtotal}" />
+                    <Label Grid.Column="1" Text="{Binding Subtotal}" />
                     <Button Grid.Row="1"
                             Command="{Binding PreviousCommand}"
                             Text="Previous" />
