Implemented edit swipe item, tried to start Json serialization

--- a/ShoppingApp/ShoppingApp/AppShell.xaml
+++ b/ShoppingApp/ShoppingApp/AppShell.xaml
@@ -111,9 +111,9 @@
         content you can do so by calling
         await Shell.Current.GoToAsync("//LoginPage");
     -->
-    <!--<TabBar>
-        <ShellContent Route="LoginPage" ContentTemplate="{DataTemplate local:LoginPage}" />
-    </TabBar>-->
+    <TabBar>
+        <ShellContent Route="ReceiptPage" ContentTemplate="{DataTemplate local:ReceiptPage}" />
+    </TabBar>
 
     <!-- Optional Templates
     // These may be provided inline as below or as separate classes.
